# scrubjay

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/scrubjay/: __init__.py
src/scrubjay/cli/: main.py
src/scrubjay/core/: __init__.py  cache.py  config.py  detector.py  session.py  tokenizer.py  types.py
src/scrubjay/hooks/: __init__.py
src/scrubjay/profiles/: __init__.py  _schema.py  corelight.yaml  esinta.yaml  okta.yaml  proofpoint.yaml
src/scrubjay/proxy/: __init__.py
tests/: test_cache.py  test_cli.py  test_config.py  test_detector.py  test_integration.py  test_profiles.py  test_session.py  test_tokenizer.py  test_types.py
tests/fixtures/: corelight_conn.json  corelight_dns.json  esinta_sample.json  okta_sample.json  proofpoint_sample.json
